Add twig UI for export

--- a/src/Parthenon/Resources/views/athena/base.html.twig
+++ b/src/Parthenon/Resources/views/athena/base.html.twig
@@ -212,4 +212,8 @@
 <script src="{{ asset('bundles/parthenon/js/athena/vendor.min.js') }}"></script>
 <script src="{{ asset('bundles/parthenon/js/athena/settings.js') }}"></script>
 <script src="{{ asset('bundles/parthenon/js/athena/app.js') }}"></script>
+
+{% block jquerycontent %}
+
+{% endblock %}
 </html>
