--- a/src/Parthenon/Resources/views/athena/crud/list.html.twig
+++ b/src/Parthenon/Resources/views/athena/crud/list.html.twig
@@ -69,7 +69,7 @@
             </div>
             <div class="card-body pt-1">
                 <div class="table-responsive">
-                    <form method="post" action="./export?sort_key={{ currentSortKey }}&sort_type={{ currentSortType }}&last_key={{ results.lastKey }}&step_back_key={{ currentLastKey }}{{ athena_crud_filters_link(listFilters) }}">
+                    <form method="post" action="./export?sort_key={{ currentSortKey }}&sort_type={{ currentSortType }}{{ athena_crud_filters_link(listFilters) }}">
                         <table class="table table-hover mb-0">
                             <thead>
                                 <tr>
