--- a/src/Parthenon/Resources/views/athena/crud/list.html.twig
+++ b/src/Parthenon/Resources/views/athena/crud/list.html.twig
@@ -140,8 +140,8 @@
                                     </select>
                                 </div>
                             </div>
-                            <button class="btn btn-primary" name="export_type" value="selected">{{ 'parthenon.athena.crud.list.export_selected'|trans }}</button>
-                            <button class="btn btn-dark" name="export_type" value="all">{{ 'parthenon.athena.crud.list.export_all'|trans }}</button>
+                            <button class="btn btn-primary" id="export_selected" name="export_type" value="selected">{{ 'parthenon.athena.crud.list.export_selected'|trans }}</button>
+                            <button class="btn btn-dark" id="export_all" name="export_type" value="all">{{ 'parthenon.athena.crud.list.export_all'|trans }}</button>
                         </div>
                     </form>
                     {% endif %}
