[Athena] Add entity type to view list

--- a/src/Parthenon/Resources/views/athena/crud/list.html.twig
+++ b/src/Parthenon/Resources/views/athena/crud/list.html.twig
@@ -111,7 +111,7 @@
                                             {% if listView.isLink(name) %}
                                                 <a href="{{ path('parthenon_athena_crud_' ~ section.urlTag ~ '_read',{'id': item.id}) }}">{{ field.htmlOutput }}</a>
                                             {% else %}
-                                                {{ field.htmlOutput }}
+                                                {{ field.htmlOutput | raw }}
                                             {% endif %}
                                         </td>
                                     {% endfor %}
