--- a/src/Parthenon/Resources/views/athena/crud/create.html.twig
+++ b/src/Parthenon/Resources/views/athena/crud/create.html.twig
@@ -30,7 +30,7 @@
                             </div>
                         {% elseif field.type == "collection" %}
                             {% set formField = attribute(form, field.name) %}
-                            <ul class="sub-form-{{ field.name }}"
+                            <ul class="sub-form-{{ field.name }} collection-list"
                                 data-index="{{ formField|length > 0 ? formField|last.vars.id : 0 }}"
                                 data-prototype="{{ form_widget(formField.vars.prototype)|e('html_attr') }}"
                             >
@@ -98,5 +98,10 @@
             .forEach(btn => {
                 btn.addEventListener("click", addFormToCollection)
             });
+        document
+            .querySelectorAll('ul.collection-list li')
+            .forEach((tag) => {
+                addTagFormDeleteLink(tag)
+            })
     </script>
 {% endblock %}
