--- a/src/Parthenon/Resources/views/athena/crud/create.html.twig
+++ b/src/Parthenon/Resources/views/athena/crud/create.html.twig
@@ -38,7 +38,9 @@
                                     <li>{{ form_row(subField) }}</li>
                                 {% endfor %}
                             </ul>
-                            <button type="button" class="add_item_link" data-collection-holder-class="sub-form-{{ field.name }}">Add a {{ field.name }}</button>
+                            <button type="button" class="add_item_link btn btn-lg btn-primary" data-collection-holder-class="sub-form-{{ field.name }}">
+                                {{ 'parthenon.backoffice.crud.create.add_to_collection'|trans }}
+                            </button>
 
                         {% else %}
                             <div class="row">
@@ -63,6 +65,7 @@
         const addTagFormDeleteLink = (item) => {
             const removeFormButton = document.createElement('button');
             removeFormButton.innerText = 'Delete';
+            removeFormButton.className = 'btn btn-lg btn-danger';
 
             item.append(removeFormButton);
 
