[Billing] More work on subscription plans

--- a/src/Parthenon/Resources/views/athena/crud/edit.html.twig
+++ b/src/Parthenon/Resources/views/athena/crud/edit.html.twig
@@ -32,7 +32,7 @@
                     {% elseif field.type == "collection" %}
                         {% set formField = attribute(form, field.name) %}
                         <ul class="sub-form-{{ field.name }} collection-list"
-                            data-index="{{ formField|length > 0 ? formField|last.vars.id : 0 }}"
+                            data-index="{{ formField|length > 0 ? formField|length : 0 }}"
                             data-prototype="{{ form_widget(formField.vars.prototype)|e('html_attr') }}"
                         >
                             {% for subField in formField %}
